tests/compile_fail/call_arity.olrn
fn add(a: i64, b: i64) -> i64
{
    ret a + b
}

fn main() -> void
{
    @pl(add(1))
    @pl(add(1, 2, 3))
}
